css tweaks to get to fit screen correctly on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@ body, html {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%
+  height: 100%;
 }
 
 * { box-sizing: border-box;}
@@ -16,6 +16,6 @@ code {
     monospace;
 }
 
-body > #root > div {
-  height: 100vh;
+#root  {
+  height: 100%;
 }
